@@ -6,7 +6,6 @@ DESIGN
 - controls for interactive equation (spinners, pickers, ...)
 
 HIGH
-- Point-Slope: slope drag manipulator not working correctly (PointSlopeGrapNode, PointSlopeDragHandler)
 - Point-Slope: dynamically adjust ranges for rise, run, x1, x2 (PointSlopeModel)
 - Point-Slope: skip over values that would result in slope=0/0 (PointSlopeModel)
 - Point-Slope: reduced forms of equation (PointSlopeEquationFactory)
